Changed quarto description of utilization function

--- a/challenge-02.qmd
+++ b/challenge-02.qmd
@@ -287,7 +287,7 @@ validar_supuestos(fit)
 
 ### Mejora de la función `validar_supuestos()`
 
-A continuación crearemos una función más completa para la validación y construcción de un modelo de regresión lineal múltiple. En ella vamos a seguir los siguientes pasos de construcción de un modelo, ignorando el primer paso del ajuste de este.
+A continuación, cargaremos la función que hemos creado en nuestro repositorio de [GitHub](https://raw.githubusercontent.com/unfresh25/Challenge--2/master/function.R), la cual es una herramienta más completa para la validación y construcción de un modelo de regresión lineal múltiple. En ella seguiremos una serie de pasos para la construcción del modelo, omitiendo el primer paso de ajuste inicial.
 
 1. Ajuste
 2. Validación
@@ -305,122 +305,17 @@ A continuación crearemos una función más completa para la validación y const
 5. Outliers/Incluenciales
    - Distancia de Cook
    - DFBetas
-6. Inferencia
-   - Intervalo de confianza
-   - Intervalo de predicción
    
-Veamos entonces,
+Para utilizar esta función en nuestro entorno de trabajo, primero cargaremos el código desde el repositorio:
 
 ``` {r}
-validar_supuestos <- function(model, plot = F) {
-  s <- summary(model)
-  
-  # Validación
-  ## Prueba de significancia global
-  psg <- ifelse(
-    s$fstatistic[[1]] > 1,
-    "Significativo",
-    "No significativo"
-  )
-  ## Prueba de significancia marginal
-  psm <- ifelse(
-    any(s$coefficients[, 4] < 0.05),
-    "Significativas",
-    "No significativo"
-  )
-  ## Ajuste del modelo (R2 ajustado)
-  radj <- ifelse(
-    s$adj.r.squared > 0.75,
-    "Significativo",
-    "No significativo"
-  )
-  
-  # Verificación de supuestos del error
-  st_r <- rstudent(model)
-  ## Normalidad
-  nor <- ifelse(
-    shapiro.test(st_r)$p.value >= 0.05,
-    "Cumple",
-    "No cumple"
-  )
-  ## Independencia
-  ind <- ifelse(
-    durbinWatsonTest(fit)$p >= 0.05,
-    "Cumple",
-    "No cumple"
-  )
-  ## Homocedasticidad
-  hom <- ifelse(
-    ncvTest(fit)$p >= 0.05,
-    "Cumple",
-    "No cumple"
-  )
-  
-  # Multicolinealidad
-  mul <- ifelse(
-    any(mctest(model)$odiags[, 2] == 0),
-    "Cumple",
-    "No cumple"
-  )
-  
-  # Outliers/Influenciales
-  ## Outliers 
-  res <- which(st_r > 3 | st_r < -3)
-  nout <- ifelse(
-    length(res) == 0, 
-    "No hay outliers", 
-    length(res)
-  )
-  ## Influenciales
-  cooksd <- cooks.distance(model)
-  obs_inf <- which(cooksd > 0.05)
-  inf <- ifelse(
-    length(obs_inf) > 0,
-    paste(obs_inf, collapse = ", "),
-    "No hay influenciales"
-  )
-  
-  
-  message("Validación")
-  out_v <- c(
-    "Significancia Global" = psg,
-    "Significancia Marginal" = psm,
-    "R2 ajustado" = radj
-  )
-  print(out_v)
-  
-  out_r <- c(
-    "Normalidad" = nor,
-    "Independencia" = ind,
-    "Homocedasticidad" = hom
-  )
-  
-  message("Verificación de residuales")
-  print(out_r)
-  
-  message("")
-  print(c("Multicolinealidad" = mul))
-  if(!(mul == "Cumple")) {
-    print(c(vif(model)))
-  }
-  
-  message("Outliers/Influenciales")
-  out_oi <- c(
-    "Outliers" = nout,
-    "Influenciales" = inf
-  )
-  print(out_oi)
-  if(plot == T) {
-    plot(model, which = 4, las = 1)
-  }
-  
-}
+source("https://raw.githubusercontent.com/unfresh25/Challenge--2/master/function.R")
 ```
 
-Ahora, evaluemos el modelo (`fit`) utilizando la función creada
+Luego, procederemos a evaluar el modelo (`fit`) utilizando la función creada, en este caso utilizamos `influencial_plot = T` para ver el gráfico de la **distancia de cooks**. Entonces,
 
 ``` {r}
-validar_supuestos(fit, plot = T)
+validar_supuestos(fit, influencial_plot = T)
 ```
 
 ### Predicción 
