--- a/challenge-02.qmd
+++ b/challenge-02.qmd
@@ -312,7 +312,7 @@ Para utilizar esta función en nuestro entorno de trabajo, primero cargaremos el
 source("https://raw.githubusercontent.com/unfresh25/Challenge--2/master/function.R")
 ```
 
-Luego, procederemos a evaluar el modelo (`fit`) utilizando la función creada, en este caso utilizamos `influencial_plot = T` para ver el gráfico de la **distancia de cooks**. Entonces,
+Luego, procederemos a evaluar el modelo (`fit`) utilizando la función creada, en este caso utilizamos `plot = T` para ver el gráfico de la **distancia de cooks**. Entonces,
 
 ``` {r}
 validar_supuestos(fit, influencial_plot = T)
